RESOLVED FIXED240463
RealtimeOutgoingVideoSourceCocoa pixelBufferPool should use video range
https://bugs.webkit.org/show_bug.cgi?id=240463
Summary RealtimeOutgoingVideoSourceCocoa pixelBufferPool should use video range
Karl Rackler
Reported 2022-05-16 10:17:49 PDT
Description: imported/w3c/web-platform-tests/webrtc/RTCRtpSender-replaceTrack.https.html The first failure that I saw on the dashboard was 5/6/2022 at r293885, and the dashboard shows passing on r293882. Between r293883 and r293885 probably introduced the consistent failure. REPRODUCTION STEPS I can reproduce this on r293885, but repro against all earlier commits are also failures which is different from the dashboard history. Command: run-webkit-tests --root 293885 --ios-simulator --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 --no-retry imported/w3c/web-platform-tests/webrtc/RTCRtpSender-replaceTrack.https.html Result: Regressions: Unexpected text-only failures (1) imported/w3c/web-platform-tests/webrtc/RTCRtpSender-replaceTrack.https.html [ Failure ] History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebrtc%2FRTCRtpSender-replaceTrack.https.html&platform=ios&limit=50000 Diff: --- /Volumes/Data/worker/Apple-iOS-15-Simulator-Debug-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCRtpSender-replaceTrack.https-expected.txt +++ /Volumes/Data/worker/Apple-iOS-15-Simulator-Debug-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/webrtc/RTCRtpSender-replaceTrack.https-actual.txt @@ -1,3 +1,5 @@ + +Harness Error (TIMEOUT), message = null PASS Calling replaceTrack on closed connection should reject with InvalidStateError PASS Calling replaceTrack with track of different kind should reject with TypeError @@ -8,5 +10,5 @@ PASS Calling replaceTrack(null) on sender set to session description should resolve with sender.track set to null PASS Calling replaceTrack on sender with stopped track and and set to session description should resolve with sender.track set to given track PASS Calling replaceTrack on sender with similar track and and set to session description should resolve with sender.track set to new track -PASS ReplaceTrack transmits the new track not the old track +TIMEOUT ReplaceTrack transmits the new track not the old track Test timed out stderr: Failed to load 'about:blank', terminating process and trying again. com.apple.WebKit.WebContent.Development terminated (pid 98337) for reason: requested by client Failed to load 'about:blank' again after termination. com.apple.WebKit.WebContent.Development terminated (pid 99211) for reason: requested by client
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-16 10:18:08 PDT
Karl Rackler
Comment 2 2022-05-16 10:23:40 PDT
I have marked this test as a consistent failure while this issue is investigated.
Karl Rackler
Comment 3 2022-05-16 10:28:19 PDT
EWS
Comment 4 2022-05-16 10:31:10 PDT
Test gardening commit r294239 (250597@main): <https://commits.webkit.org/250597@main> Reviewed commits have been landed. Closing PR #638 and removing active labels.
Ryan Haddad
Comment 5 2022-05-16 14:55:08 PDT
The test history does indeed suggest that this started with r293885 / 250343@main, and that is the only WebRTC related commit in the range.
Alexey Proskuryakov
Comment 6 2022-05-16 17:13:34 PDT
*** Bug 240464 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 7 2022-05-23 04:12:19 PDT
*** Bug 240348 has been marked as a duplicate of this bug. ***
youenn fablet
Comment 8 2022-05-23 04:17:36 PDT
EWS
Comment 9 2022-05-23 06:38:56 PDT
Committed r294637 (250861@main): <https://commits.webkit.org/250861@main> Reviewed commits have been landed. Closing PR #909 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.