RealtimeOutgoingVideoSourceCocoa pixelBufferPool should use video range https://bugs.webkit.org/show_bug.cgi?id=240463 rdar://problem/93354226

Patch by Youenn Fablet <youennf@gmail.com> on 2022-05-23
Reviewed by Eric Carlson.

We switched to using a pixel conformer that was using preferredPixelFormat to using libyuv routine.
Update the pixel buffer pool to use kCVPixelFormatType_420YpCbCr8BiPlanarVideoRange to be compliant with libyuv routines.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.mm:
(WebCore::RealtimeOutgoingVideoSourceCocoa::pixelBufferPool):

Canonical link: https://commits.webkit.org/250861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294637 268f45cc-cd09-0410-ab3c-d52691b4dbfc