Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.mm
@@ -78,7 +78,7 @@ RetainPtr<CVPixelBufferRef> RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer(
 CVPixelBufferPoolRef RealtimeOutgoingVideoSourceCocoa::pixelBufferPool(size_t width, size_t height)
 {
     if (!m_pixelBufferPool || m_pixelBufferPoolWidth != width || m_pixelBufferPoolHeight != height) {
-        auto result = createInMemoryCVPixelBufferPool(width, height, preferedPixelBufferFormat());
+        auto result = createInMemoryCVPixelBufferPool(width, height, kCVPixelFormatType_420YpCbCr8BiPlanarVideoRange);
         if (!result) {
             RELEASE_LOG_ERROR(WebRTC, "RealtimeOutgoingVideoSourceCocoa failed creating buffer pool with error %d", result.error());
             return nullptr;
